--- a/index.html
+++ b/index.html
@@ -11,3 +11,9 @@
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
+
+<!-- 
+create un nuovo componente per visualizzare le card dei fumetti, prendendo i dati dal file json
+ che trovate in allegato e un nuovo componente per il jumbotron.
+Una volta inseriti tutti i contenuti dinamicamente, completate il vostro layout e rifinite i dettagli con Sass. 
+-->
